--- a/Email Sub/index.html
+++ b/Email Sub/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Email.Sub</title>
 </head>
 
 <body>
@@ -16,13 +16,15 @@
                 <div><img src="Group 418.png" alt="Zuri logo"></div>
                 <div class="logo_name">Zuri</div>
             </div>
-            <p class="logo_text paragraph">Confirm your email to join Zuri</p>
+            <!-- <p class="logo_text paragraph">Confirm your email to join Zuri</p> -->
         </div class="header">
         <main>
-            <p class="paragraph">Hello! Once you have confirmed your email address and set a password, you will be the newest member on Zuri workspace Zuri</p>
-            <div class="button"><button>Confirm Email</button></div>
-            <p class="paragraph">If you have any questions, simply reply to this email. we would love to help.</p>
-            <p class="paragraph">If you didn't request this email, there is nothing to worry about - you can safely ignore it</p>
+            <div class="paragraph text_greetings">Hello there,</div>
+            <div class="paragraph text_body">We're thrilled to welcome you to the Zuri Chat community. Thank you for signing up for updates from Zuri Chat. To make your journey with Zuri Chat smooth and easy, we will give you regular tips on how to maximize your team's productivity with
+                Zuri Chat. Also, because you are our VVIP, you will also be the first to get exclusive offers geared to you and your team.</div>
+            <div class="paragraph text_closing">if you need any help at all, get in touch with us at contact-us@gmail.com. We'll be delighted to assist! see you around,</div>
+            <div class="paragraph text_signature">Jazeel</div>
+
         </main>
         <footer>
             <div class="logo">
@@ -37,7 +39,7 @@
         </footer>
         <div class="footer_link_tags">
             <div class="footer_link_tags_text">Have questions about your new workspace? Drop us a note at help@Zuri.com. We're glad you are here</div>
-            <div>
+            <div class="quick_links">
                 <ul>
                     <li><a href=".">Our Blog</a></li>
                     <li><a href=".">Email Preferences</a></li>
