--- a/Email Sub/index.html
+++ b/Email Sub/index.html
@@ -20,10 +20,16 @@
         </div class="header">
         <main>
             <div class="paragraph text_greetings">Hello there,</div>
-            <div class="paragraph text_body">We're thrilled to welcome you to the Zuri Chat community. Thank you for signing up for updates from Zuri Chat. To make your journey with Zuri Chat smooth and easy, we will give you regular tips on how to maximize your team's productivity with
-                Zuri Chat. Also, because you are our VVIP, you will also be the first to get exclusive offers geared to you and your team.</div>
-            <div class="paragraph text_closing">If you need any help at all, get in touch with us at contact-us@gmail.com. We'll be delighted to assist! see you around,</div>
-            <div class="paragraph text_signature">Jazeel</div>
+            <div class="paragraph text_body">
+                <p>We're thrilled to welcome you to the Zuri Chat community. Thank you for signing up for updates from Zuri Chat.</p>
+                <p> To make your journey with Zuri Chat smooth and easy, we will give you regular tips on how to maximize your team's productivity with Zuri Chat. Also, because you are our VVIP, you will also be the first to get exclusive offers geared to
+                    you and your team.</p>
+            </div>
+            <div class="paragraph text_closing">If you need any help at all, get in touch with us at contact-us@gmail.com. We'll be delighted to assist!</div>
+            <div class="paragraph text_signature">
+                <p>See you around.</p>
+                <p>Jazeel</p>
+            </div>
 
         </main>
         <footer>
