--- a/Email Sub/index.html
+++ b/Email Sub/index.html
@@ -13,44 +13,46 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <div><img src="Group 418.png" alt="Zuri logo"></div>
+                <div><img src="/images/Group 418.png" alt="Zuri logo"></div>
                 <div class="logo_name">Zuri</div>
             </div>
-            <!-- <p class="logo_text paragraph">Confirm your email to join Zuri</p> -->
         </div class="header">
-        <main>
-            <div class="paragraph text_greetings">Hello there,</div>
-            <div class="paragraph text_body">
-                <p>We're thrilled to welcome you to the Zuri Chat community. Thank you for signing up for updates from Zuri Chat.</p>
-                <p> To make your journey with Zuri Chat smooth and easy, we will give you regular tips on how to maximize your team's productivity with Zuri Chat. Also, because you are our VVIP, you will also be the first to get exclusive offers geared to
-                    you and your team.</p>
-            </div>
-            <div class="paragraph text_closing">If you need any help at all, get in touch with us at contact-us@gmail.com. We'll be delighted to assist!</div>
-            <div class="paragraph text_signature">
-                <p>See you around.</p>
-                <p>Jazeel</p>
-            </div>
+        <div class="content">
 
-        </main>
-        <footer>
-            <div class="logo">
-                <div><img src="Group 418.png" alt="Zuri logo"></div>
-                <div class="logo_name_footer">Zuri</div>
-            </div>
-            <div class="footer_link">
-                <div>Workspace URL</div>
-                <a href="zuri.chat">Zuriboard.zuri.com</a>
-            </div>
+            <main>
+                <div class="paragraph text_greetings">Hello _usersName_,</div>
+                <div><img src="/images/Group 34274.png" alt="people chatting"></div>
+                <div class="paragraph text_body">
+                    <p>We're thrilled to welcome you to the Zuri Chat community. Thank you for signing up for updates from Zuri Chat.</p>
+                    <p> To make your journey with Zuri Chat smooth and easy, we will give you regular tips on how to maximize your team's productivity with Zuri Chat. Also, because you are our VVIP, you will also be the first to get exclusive offers geared
+                        to you and your team.</p>
+                </div>
+                <div class="paragraph text_closing">If you need any help at all, get in touch with us at <a href=".">contact-us@gmail.com</a>.</div>
+                <div class="paragraph text_signature">
+                    <p> We'll be delighted to assist!</p>
+                </div>
 
-        </footer>
-        <div class="footer_link_tags">
-            <div class="footer_link_tags_text">Have questions about your new workspace? Drop us a note at help@Zuri.com. We're glad you are here</div>
-            <div class="quick_links">
-                <ul>
-                    <li><a href=".">Our Blog</a></li>
-                    <li><a href=".">Email Preferences</a></li>
-                    <li><a href=".">Policies</a></li>
-                </ul>
+            </main>
+            <footer>
+                <div class="footer_logo">
+                    <div><img src="/images/Group 418.png" alt="Zuri logo"></div>
+                    <div class="logo_name_footer">Zuri</div>
+                </div>
+                <div class="footer_link">
+                    <div>Workspace URL</div>
+                    <a href="zuri.chat">Zuriboard.zuri.com</a>
+                </div>
+
+            </footer>
+            <div class="footer_link_tags">
+                <div class="footer_link_tags_text">Have questions about your new workspace? Drop us a note at help@Zuri.com. We're glad you are here</div>
+                <div class="quick_links">
+                    <ul>
+                        <li><a href=".">Our Blog</a></li>
+                        <li><a href=".">Email Preferences</a></li>
+                        <li><a href=".">Policies</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
