--- a/Email Sub/index.html
+++ b/Email Sub/index.html
@@ -20,16 +20,20 @@
         <div class="content">
 
             <main>
-                <div class="paragraph text_greetings">Hello _usersName_,</div>
+                <div class="paragraph text_greetings">
+                    <p>Hello _usersName_,</p>
+                </div>
                 <div><img src="/images/Group 34274.png" alt="people chatting"></div>
                 <div class="paragraph text_body">
                     <p>We're thrilled to welcome you to the Zuri Chat community. Thank you for signing up for updates from Zuri Chat.</p>
-                    <p> To make your journey with Zuri Chat smooth and easy, we will give you regular tips on how to maximize your team's productivity with Zuri Chat. Also, because you are our VVIP, you will also be the first to get exclusive offers geared
+                    <p>To make your journey with Zuri Chat smooth and easy, we will give you regular tips on how to maximize your team's productivity with Zuri Chat. Also, because you are our VVIP, you will also be the first to get exclusive offers geared
                         to you and your team.</p>
                 </div>
-                <div class="paragraph text_closing">If you need any help at all, get in touch with us at <a href=".">contact-us@gmail.com</a>.</div>
+                <div class="paragraph text_closing">
+                    <p>If you need any help at all, get in touch with us at <a href=".">contact-us@gmail.com</a>.</p>
+                </div>
                 <div class="paragraph text_signature">
-                    <p> We'll be delighted to assist!</p>
+                    <p>We'll be delighted to assist!</p>
                 </div>
 
             </main>
