--- a/Email Sub/index.html
+++ b/Email Sub/index.html
@@ -21,7 +21,7 @@
 
             <main>
                 <div class="paragraph text_greetings">
-                    <p>Hello _usersName_,</p>
+                    <p>Hello there,</p>
                 </div>
                 <div><img src="/images/Group 34274.png" alt="people chatting"></div>
                 <div class="paragraph text_body">
